--- a/index.html
+++ b/index.html
@@ -5,15 +5,40 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel="stylesheet" href="style.css">
     <script src='main.js'></script>
 </head>
 <body>
     <h1>Sobre a Barbearia Alura</h1>
+
     Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para seu cabelo e barba. Fundada em 2023, a Barbearia 
     já é destaque na cidade e conquistou novos clientes a cada dia.
 
-    Nossa missão é: "Proporcianar auto-estima e qualidade de vida aos clientes"
+
+   <p>Nossa missão é: "Proporcianar auto-estima e qualidade de vida aos clientes"
+   
+  <p>oferecemos profissionais experientes e antenados ás mudanças
+   no mundo da moda. O atendimento possui padrão de exelencia e
+   agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+
+   <h2 Beneficios</h2>
+
+   <ul>
+      <li>atendimento aos clientes</li>
+      <li>Espaço diferenciados</li>
+      <li>Profissionais qualificados</li>
+      <li>Pontualidade</li>
+      <li>Limpesa</li>
+      <li>Comida(pizza, salgadpo, refri, aguá, etc...)</li>
+      <li>Àrea de jogos</li>
+
+
 
 </body>
-</html>
+</html
+
+
+
+
+
+
